--- a/_config.yml
+++ b/_config.yml
@@ -1,7 +1,7 @@
-title: "Compendium Global"
+title: "StudyBase"
 description: "A specialized repository of techniques, strategies, and notes across various academic subjects."
 theme: minima
-baseurl: "/math-compendium"
+baseurl: "/StudyBase"
 url: "https://thekunalprashant.github.io"
 
 markdown: kramdown
@@ -10,6 +10,7 @@ kramdown:
 
 plugins:
   - jekyll-feed
+  - jekyll-last-modified-at
 
 words_per_minute: 200
 
